log
Fri May  8 09:56:54 PM UTC 2026: 
 tests:  0|6
========================================
b0b99a7
Fri May  8 10:07:21 PM UTC 2026: 
 tests:  0|6
========================================
36e8bf5
Sun May 17 04:49:58 PM UTC 2026: 
 graph.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|0
c35ddaa
Sun May 17 05:13:44 PM UTC 2026: 
 graph.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘addNode’:
graph.c:38:36: error: passing argument 2 of ‘map_search’ discards ‘const’ qualifier from pointer target type [-Werror=discarded-qualifiers]
   38 |     if(map_search(g->adjacencyMap, label) != NULL)return;
      |                                    ^~~~~
In file included from graph.c:8:
map.h:22:37: note: expected ‘void *’ but argument is of type ‘const char *’
   22 | MapPair *map_search(Map *map, void *key);
      |                               ~~~~~~^~~
graph.c: In function ‘addEdge’:
graph.c:46:56: error: ‘scr’ undeclared (first use in this function); did you mean ‘src’?
   46 |     MapPair* pair = map_search(g->adjacencyMap, (void*)scr);
      |                                                        ^~~
      |                                                        src
graph.c:46:56: note: each undeclared identifier is reported only once for each function it appears in
graph.c:48:5: error: unknown type name ‘list’; did you mean ‘List’?
   48 |     list* adjlist = (List*) pair -> value;
      |     ^~~~
      |     List
graph.c:48:21: error: initialization of ‘int *’ from incompatible pointer type ‘List *’ [-Wincompatible-pointer-types]
   48 |     list* adjlist = (List*) pair -> value;
      |                     ^
graph.c:52:28: error: ‘next’ undeclared (first use in this function)
   52 |     list_pushBack(adjlist, next);
      |                            ^~~~
graph.c:52:19: error: passing argument 1 of ‘list_pushBack’ from incompatible pointer type [-Wincompatible-pointer-types]
   52 |     list_pushBack(adjlist, next);
      |                   ^~~~~~~
      |                   |
      |                   int *
In file included from graph.h:4,
                 from graph.c:6:
list.h:20:26: note: expected ‘List *’ but argument is of type ‘int *’
   20 | void list_pushBack(List *L, void *dato);
      |                    ~~~~~~^
cc1: all warnings being treated as errors
929d70c
Sun May 17 05:16:01 PM UTC 2026: 
 graph.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘addEdge’:
graph.c:52:28: error: ‘next’ undeclared (first use in this function)
   52 |     list_pushBack(adjlist, next);
      |                            ^~~~
graph.c:52:28: note: each undeclared identifier is reported only once for each function it appears in
865371d
Sun May 17 05:17:24 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
a007e97
Sun May 17 05:29:34 PM UTC 2026: 
 graph.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘getAdjacentLabels’:
graph.c:72:51: error: expected expression before ‘void’
   72 |     MapPair* nodo = map_search(g->adjacencyMap, (*void)label);
      |                                                   ^~~~
graph.c:72:56: error: expected ‘)’ before ‘label’
   72 |     MapPair* nodo = map_search(g->adjacencyMap, (*void)label);
      |                               ~                        ^~~~~
      |                                                        )
graph.c:75:37: error: ‘MapPair’ has no member named ‘valor’
   75 |     for(Edge*label = list_first(nodo->valor); label!= NULL; label =listNext(nodo->valor))
      |                                     ^~
graph.c:75:68: error: implicit declaration of function ‘listNext’; did you mean ‘list_next’? [-Wimplicit-function-declaration]
   75 |     for(Edge*label = list_first(nodo->valor); label!= NULL; label =listNext(nodo->valor))
      |                                                                    ^~~~~~~~
      |                                                                    list_next
graph.c:75:81: error: ‘MapPair’ has no member named ‘valor’
   75 |     for(Edge*label = list_first(nodo->valor); label!= NULL; label =listNext(nodo->valor))
      |                                                                                 ^~
graph.c:77:40: error: ‘Edge’ has no member named ‘key’
   77 |             list_pushBack(labels, label->key);
      |                                        ^~
ec52214
